fix some alignment issues

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ nav{
     padding: 24px;
     justify-content: center;
     align-items: center;
+    padding: 60px 60px 0;
     /* border: 1px solid red; */
     margin-bottom: 50px;
     /* margin-top: 50px; */
@@ -129,6 +130,7 @@ nav{
     font-weight: 300;
     line-height: 36px;
     padding: 24px;
+    min-height: 100px;
 }
 
 /* animate-logo */
@@ -196,9 +198,9 @@ nav{
 
 .outer{
     display: flex;
-    gap:20px;
+    gap:40px;
     width: 100%;
-    max-width: 400px;
+    max-width: 420px;
     /* border: 2px solid red; */
     justify-content: center;
     align-items: center;
@@ -206,7 +208,7 @@ nav{
 
 .box-bottom{
     width: 100%;
-    height:60px;
+    height:38px;
     background: #244ac2;
     color: #fff;
     margin-bottom: 10px;
@@ -303,7 +305,7 @@ nav{
   font-size: 22px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 150px;
+  bottom: 200px;
   width: 50%;
   text-align: center;
   background-color: #244ac2;
